fixed a minor issue that makes the title container to go too long in widescreens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,7 +166,7 @@
 	    float: left;
 	}
 	#modal {
-	    width: 75%;
+	    width: 1010px;
 	    height: 550px;
 	    border: 1px solid #CCC;
 	    box-shadow: 0 1px 5px #CCC;
